SERVER-27822: Count plans sometimes don't need a FETCH